--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,14 @@
     android:layout_height="match_parent"
     tools:context="com.bharath.twoactivities.MainActivity">
 
-    <!--<TextView
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />-->
+        android:gravity="center"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:textColor="@color/colorAccent"
+        android:id="@+id/tv1"/>
 
     <Button
         android:id="@+id/button"
