--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="30sp"
+        android:textStyle="bold"
+        android:textColor="@color/colorAccent"
         android:id="@+id/tv1"/>
 
     <Button
